# stmtest1

./: CMakeLists.txt  Cargo.toml  memory.x  stm32f103.resc  stmtest1.ioc
.cargo/: config.toml
Core/Src/: main.c  stm32f1xx_hal_msp.c
src/: gauss.rs  main.rs  utils.rs
